style.css
/* ... */
.main-navigation ul li.menu-item-has-children > a::before {
  content: "▾";
  position: absolute;
  right: 5px;
  top: 50%;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  transition: all 0.3s ease-in-out;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
}

.main-navigation li {
  position: relative;
  display: inline-block;
  margin-bottom: 0;
}

.main-navigation li li {
  float: none;
  display: block;
}

.main-navigation li > a {
  position: relative;
}

.main-navigation li li.current_page_item > a:after {
  display: none;
}

.main-navigation li li.current-menu-item > a:after {
  display: none;
}

.main-navigation .dropdown-toggle::after {
  display: none !important;
}

@media screen and (min-width: 37.5em) {
  .menu-toggle {
    display: none;
  }
}

@media screen and (max-width: 1200px) {
  .menu-toggle {
    display: block;
    background: none;
    padding: 0;
    z-index: 999;
    margin: 0 auto;
  }
  
  .navbar-toggler {
    margin: 0 0 0 auto;
    border: 0;
    border-radius: 0;
    padding: 0;
  }
  
  .main-navigation.toggled #nav-icon span:nth-child(1) {
    top: 7px;
    width: 0%;
    left: 50%;
  }
  
  .main-navigation.toggled #nav-icon span:nth-child(2) {
    transform: rotate(45deg);
  }
  
  .main-navigation.toggled #nav-icon span:nth-child(3) {
    transform: rotate(-45deg);
  }
  
  .main-navigation.toggled #nav-icon span:nth-child(4) {
    top: 7px;
    width: 0%;
    left: 50%;
  }
  
  .main-navigation ul li a {
    padding: 10px 15px;
    width: 100%;
  }
  
  .main-navigation ul li.page_item_has_children > a::before, .main-navigation ul li.menu-item-has-children > a::before {
    right: 15px;
  }
  
  .main-navigation ul li ul li.page_item_has_children > a::before, .main-navigation ul li ul li.menu-item-has-children > a::before {
    right: 15px;
  }
  
  .main-navigation ul ul {
    visibility: initial;
    opacity: 1;
    transition: initial;
    top: initial;
    left: initial;
    width: 100%;
    position: static;
    z-index: 999;
    transform-origin: initial;
    animation-fill-mode: initial;
    transform: initial;
    box-shadow: initial;
    height: 0;
    overflow: hidden;
    background-color: var(--dark-color);
    margin: 0;
  }
  
  .main-navigation li {
    display: block;
    border-bottom: 1px solid #eee;
  }
  
  .main-navigation .nav-menu {
    display: none;
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    background: var(--dark-color);
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
    z-index: 999;
    margin: 0;
  }
  
  .main-navigation.toggled .nav-menu {
    display: block;
    z-index: 999;
  }
  
  .main-navigation ul li:hover > ul, .main-navigation ul li:focus > ul, .main-navigation ul li.focus > ul {
    height: auto;
    overflow: visible;
    z-index: 1000;
  }
  
  .main-navigation ul ul ul {
    left: initial;
    top: initial;
    border-style: solid none none;
    border-top: 1px solid #ddd;
  }
  

  .header .header-wrapper {
    display: flex;
    flex-wrap: wrap;
  }
  
  .header-wrapper .main-navigation ul {
    float: none;
  }
}

/* Social Navigation */

.nav-social-links {
  display: flex;
  align-items: center;
  gap: 20px;
}

.social-links {
  display: flex;
  justify-content: center;
}

.social-links li {
  display: flex;
}

.social-links a {
  display: inline-flex;
  margin: 0 0.5rem;
  background: none;
}

.social-links svg {
  width: 1rem;
  height: 1rem;
  fill: var(--light-color);
  transition: fill 0.2s ease;
}

.social-links a:hover svg {
  fill: var(--hover-color);
}

@media (max-width: 768px) {
  .social-links {
    display: none;
  }
}

/* Navigation Icons */

#nav-icon3 {
  width: 40px;
  height: 30px;
  position: relative;
  transform: rotate(0deg);
  transition: 0.5s ease-in-out;
  cursor: pointer;
  border: none;
}

#nav-icon3 span {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  background: var(--light-color);
  border-radius: 9px;
  opacity: 1;
  left: 0;
  transform: rotate(0deg);
  transition: 0.25s ease-in-out;
}

#nav-icon3 span:nth-child(1) {
  top: 0px;
}

#nav-icon3 span:nth-child(2),
#nav-icon3 span:nth-child(3) {
  top: 11px;
}

#nav-icon3 span:nth-child(4) {
  top: 22px;
}

#nav-icon3.open span:nth-child(1) {
  top: 11px;
  width: 0%;
  left: 50%;
}

#nav-icon3.open span:nth-child(2) {
  transform: rotate(45deg);
}

#nav-icon3.open span:nth-child(3) {
  transform: rotate(-45deg);
}

#nav-icon3.open span:nth-child(4) {
  top: 11px;
  width: 0%;
  left: 50%;
}

/* Header */

header a {
  transition: color 0.3s ease, background 0.3s ease;
}

header.site-header {
  padding: 0;
  position: relative;
  background: var(--dark-color);
}

@media screen and (max-width: 900px) {
  header.site-header {
    margin: 0 0 30px;
  }
}

header.site-header .header-wrapper {
  padding: 3rem 0;
}

@media screen and (max-width: 900px) {
  header.site-header .header-wrapper {
    padding: 1rem 0;
  }
}

header.site-header .header-wrapper .site-header-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

header.site-header .header-wrapper .site-header-wrapper .nav-social-links {
  display: flex;
  align-items: center;
  grid-gap: 20px;
}

header.site-header .header-wrapper .site-header-wrapper .site-branding {
  min-width: var(--logo-size);
  display: flex;
  align-items: center;
  gap: 10px;
  width: 350px;
}

header.site-header .header-wrapper .site-header-wrapper .site-branding .custom-logo-link {
  background: none;
}

header.site-header .header-wrapper .site-header-wrapper .site-branding .custom-logo-link img {
  width: var(--logo-size);
  max-width: none;
}

header.site-header .header-wrapper .site-header-wrapper .site-branding .site-identity {
  width: -moz-max-content;
  width: max-content;
}
/* ... */

